faqs new styling fix overflow bug

--- a/src/sass/utility/_gap.scss
+++ b/src/sass/utility/_gap.scss
@@ -153,3 +153,7 @@
         row-gap: 2rem;
     }
 }
+
+.gap-y-2-tw {
+    row-gap: 0.5rem;
+}
