--- a/src/sass/utility/_paddings.scss
+++ b/src/sass/utility/_paddings.scss
@@ -111,6 +111,11 @@
     padding-right: 4.5rem;
 }
 
+.px-6-tw {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
 // PADDING BOTTOM
 .pb-05 {
     padding-bottom: 0.5rem
