--- a/src/sass/utility/_typography-classes.scss
+++ b/src/sass/utility/_typography-classes.scss
@@ -78,6 +78,16 @@
   line-height: 1.75rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 
 
 // HEADINGS
