--- a/src/sass/utility/_widths.scss
+++ b/src/sass/utility/_widths.scss
@@ -62,6 +62,10 @@
     max-width: 85ch;
 }
 
+.max-w-5xl {
+    max-width: 64rem;
+}
+
 .max-w-433 {
     max-width: 433px;
 }
